cabal-version:       2.4
name:                gauss-parallel
version:             0.1.0.0

executable gauss-parallel
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >= 4.7 && < 5,
                    parallel,       
                    deepseq         
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010